# cpu_raymarcher

./: ATTRIBUTIONS  CMakeLists.txt
src/: main.cpp
src/render/: renderer.h
src/shader/: frag_shader.h  ray_march_depth_shader.cpp  ray_march_depth_shader.h  ray_march_edge_detection_shader.cpp  ray_march_edge_detection_shader.h  ray_march_shader.cpp  ray_march_shader.h  ray_march_test_shader.cpp  ray_march_test_shader.h
src/shader/raymarch/: camera.h  light.h  objects.h  ray.h  scene.h
src/util/: math.h  vec3.cpp  vec3.h
